--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div ><img src="assets/Ashwani.png" class="image"></div>
    
     <p class="describe" >
-       <b>I'm &nbsp;<i style="color: rgb(252, 121, 143);">Ashwani Verma</i> ,</b>
+       <b>I'm <i style="color: rgb(252, 121, 143);">Ashwani Verma</i> ,</b>
        <br>
        <br>
         Budding software developer with a good hold on data structures
