added hover video-play

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          and algorithms. My interest lies in learning what's new in technology.
           I like to work with a team of passionate individuals from different domains</p>
       <br>
-     
+     <div class="reveal">
       <div class="skills">
             <h2 >Skills:</h2><br>
             <h4>
@@ -47,12 +47,20 @@
   </h4><br>
             <button class="Button-1"><a href="assets/Ashwani's Resume.pdf" style="text-decoration: none;color:#46c5fb" >Resume</a></button>
       </div>
-      
+     </div>
       <hr style="width: 100%;border-bottom: 2px solid white;margin-top: 10%;" class="reveal">
       <div class="projects">
         <h1 style="margin-bottom: 5%;" class="reveal">My Coding Projects</h1>
         <div class="reveal">  
-        <img class="file"src="assets/Weather-app.png" >
+        <!-- <img class="file"src="assets/Weather-app.png" > -->
+        <video
+        onmouseout="this.pause();this.currentTime=0;"
+        src="assets/video/Weather.mp4"
+        type="video/mp4"
+        muted
+        class="file"
+        loop
+      ></video>
         <h2>Weather-App</h2>
           <p class="con">Make a Weather API frontend project that gives information about any city's current 
           temperature using OpenWeatherMap API that allows weather data to be queried from scripts 
@@ -65,7 +73,15 @@
         <br>
       </div>
       <div class="reveal">
-      <img class="file-1"src="assets/2048-game.png" >
+      <!-- <img class="file-1"src="assets/2048-game.png" > -->
+      <video
+        onmouseout="this.pause();this.currentTime=0;"
+        src="assets/video/2048-Game.mp4"
+        type="video/mp4"
+        muted
+        class="file-1"
+        loop
+      ></video>
       <h2>2048-Game</h2>
       <p class="con">In a plain 4x4 grid, Every turn, a new tile randomly appears in an empty spot with
          a value of either 2 or 4. Tiles with the same number merge into one when they touch. Add them up 
@@ -79,7 +95,15 @@
         <br>
       </div>
       <div class="reveal">
-        <img class="file"src="assets/birds.png" >
+        <!-- <img class="file" src="assets/birds.png" > -->
+        <video
+        onmouseout="this.pause();this.currentTime=0;"
+        src="assets/video/Birds.mp4"
+        type="video/mp4"
+        muted
+        class="file"
+        loop
+      ></video>
         <h2>Dynamic-Site</h2>
         <p class="con">The site highlights the electromagnetic effects on bird's diversity by the mobile towers and their 
         electromagnetic radiating objects like Cell phones. The data entered by the user is stored in google sheets and the 
@@ -92,7 +116,14 @@
           <br>
         </div>
         <div class="reveal">
-          <img class="file-1"src="assets/music-player.png" >
+          <!-- <img class="file-1"src="assets/music-player.png" > -->
+        <video
+        onmouseout="this.pause();this.currentTime=0;"
+        src="assets/video/Music.mp4"
+        type="video/mp4"
+        class="file-1"
+        loop
+      ></video>
           <h2>Music Player</h2>
           <p class="con">Music is one of the best ways to relieve pressure in stressful and modern society life. 
             The purpose of this project is to develop a player which can play the mp3 format. To browse and query the
