--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         onmouseout="this.pause();this.currentTime=0;"
         src="assets/video/Music.mp4"
         type="video/mp4"
+        muted
         class="file-1"
         loop
       ></video>
