New line for understanding

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <!-- <img class="file-1"src="assets/2048-game.png" > -->
       <video
         onmouseout="this.pause();this.currentTime=0;"
-        src="assets/video/2048-Game.mp4"
+        src="assets/video/2048-game.mp4"
         type="video/mp4"
         muted
         class="file-1"
