--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
       ></video>
           <h2>News Application</h2>
           <p class="con">This NewsFlash application will display the latest news articles which are verified and approved by NewsAPI.Users can browse news articles through various categories and get all details in the read more section. 
-            This ensures an infinite scroll till all outcomes are exhausted.<br><br> <a href="https://github.com/Ashwani-Verma-07/NewsFlash-App" style="color: white;text-decoration: none;">🔗GiuHub Repo</a>
+            This ensures an infinite scroll till all outcomes are exhausted.<br><br> <a href="https://github.com/Ashwani-Verma-07/NewsFlash-App" style="color: white;text-decoration: none;">🔗GitHub Repo</a>
             <br><br>
-            ✔️React-Js&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✔️HTML/CSS  
+            ✔️React-Js&nbsp;&nbsp; ✔️HTML/CSS &nbsp;&nbsp; ✔️API 
             <br><br>
-            <button class="Button-1" onclick="window.open('https://drive.google.com/file/d/1jqxiY5S3_Ovo6519-DhHmtLadFY_anM7/view?usp=share_link')">View demo</button>
+            <button class="Button-1" onclick="window.open('https://drive.google.com/file/d/1jqxiY5S3_Ovo6519-DhHmtLadFY_anM7/view?usp=share_link')">View Live</button>
           </p>
             <br>
           </div>
@@ -103,11 +103,11 @@
           <h2>Chat Application</h2>
           <p class="con"> This Chatting app allows you to communicate with others through chat. It enables you to send and receive messages. It connects with the google firebase authentication and sends messages to people who are connected to the same server. 
             If spamming or writing any abusive language will permanently block you.
-      <br><br> <a href="https://github.com/Ashwani-Verma-07/Chat-Application" style="color: white;text-decoration: none;">🔗GiuHub Repo</a>
+      <br><br> <a href="https://github.com/Ashwani-Verma-07/Chat-Application" style="color: white;text-decoration: none;">🔗GitHub Repo</a>
             <br><br>
           ✔️React-Js&nbsp;&nbsp; ✔️HTML/CSS&nbsp;&nbsp; ✔️Firebase
             <br><br>
-            <button class="Button-1" onclick="window.open('https://chat-app-4ec8c.web.app/')">View demo</button>
+            <button class="Button-1" onclick="window.open('https://chat-app-4ec8c.web.app/')">View Live</button>
             </p>
             <br>
           </div>
@@ -124,11 +124,11 @@
         <h2>Weather-App</h2>
           <p class="con">Make a Weather API frontend project that gives information about any city's current 
           temperature using OpenWeatherMap API that allows weather data to be queried from scripts 
-          and code. It displays weather, temperature, and humidity as a card or asks for device geo-location to get the data.<br><br> <a href="https://github.com/Ashwani-Verma-07/Weather-App" style="color: white;text-decoration: none;">🔗GiuHub Repo</a>
+          and code. It displays weather, temperature, and humidity as a card or asks for device geo-location to get the data.<br><br> <a href="https://github.com/Ashwani-Verma-07/Weather-App" style="color: white;text-decoration: none;">🔗GitHub Repo</a>
           <br><br>
           ✔️HTML/CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✔️JavaScript     
           <br><br>
-        <button class="Button-1" onclick="window.open('https://weather-e94fb.web.app/')">View demo</button>
+        <button class="Button-1" onclick="window.open('https://weather-e94fb.web.app/')">View Live</button>
         </p>
         <br>
       </div>
@@ -146,11 +146,11 @@
       <p class="con">In a plain 4x4 grid, Every turn, a new tile randomly appears in an empty spot with
          a value of either 2 or 4. Tiles with the same number merge into one when they touch. Add them up 
          to reach 2048! If all tiles are occupied with no combinations you LOSE. The Highest score is stored 
-         in the local storage of the device.<br><br> <a href="https://github.com/Ashwani-Verma-07/2048-game" style="color: white;text-decoration: none;">🔗GiuHub Repo</a>
+         in the local storage of the device.<br><br> <a href="https://github.com/Ashwani-Verma-07/2048-game" style="color: white;text-decoration: none;">🔗GitHub Repo</a>
         <br><br>
         ✔️HTML/CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✔️JavaScript     
         <br><br>
-        <button class="Button-1" onclick="window.open('https://ashwani-verma-07.github.io/2048-game/')">View demo</button>
+        <button class="Button-1" onclick="window.open('https://ashwani-verma-07.github.io/2048-game/')">View Live</button>
         </p>
         <br>
       </div>
@@ -167,11 +167,11 @@
         <h2>Dynamic-Site</h2>
         <p class="con">The site highlights the electromagnetic effects on the diversity of birds by the mobile towers and their 
         electromagnetic radiating objects like Cell phones. The data entered by the user is stored in google sheets and the 
-        location is given by a map. The State of India's Birds report tells about this cause.<br><br> <a href="https://github.com/Ashwani-Verma-07/mini-project" style="color: white;text-decoration: none;">🔗GiuHub Repo</a>
+        location is given by a map. The State of India's Birds report tells about this cause.<br><br> <a href="https://github.com/Ashwani-Verma-07/mini-project" style="color: white;text-decoration: none;">🔗GitHub Repo</a>
           <br><br>
           ✔️HTML/CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✔️JavaScript     
          <br><br>
-          <button class="Button-1" onclick="window.open('https://ashwani-verma-07.github.io/mini-project/')">View demo</button>
+          <button class="Button-1" onclick="window.open('https://ashwani-verma-07.github.io/mini-project/')">View Live</button>
           </p>
           <br>
         </div>
@@ -185,7 +185,7 @@
                   <div class="row">
                     <div class="contact-left">
                       <div class="icons-info">
-                      <p><i class="fa-solid fa-envelope"></i>ashverma017@gmail.com</p>
+                      <p> <a href="mailto:ashverma017@gmail.com" style="text-decoration: none; color:rgb(231, 229, 229);"><i class="fa-solid fa-envelope"></i>ashverma017@gmail.com </a></p>
                       <p ><i class="fas fa-mobile-alt" style="margin-left:-70px;"></i>+91-9205913782</p>
                       <p>
                         <i class="fa-solid fa-location-dot" style="margin-left: 10px;"></i>C-277 Swaranjayanti puram
