--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <br><br>
           ✔️React-Js&nbsp;&nbsp; ✔️HTML/CSS&nbsp;&nbsp; ✔️Firebase
             <br><br>
-            <button class="Button-1" onclick="window.open('https://chat-app-4ec8c.web.app/')">View Live</button>
+            <button class="Button-1" onclick="window.open('https://chat-application-07.netlify.app/')">View Live</button>
             </p>
             <br>
           </div>
