--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                           ><i class="fa-brands fa-facebook"></i
                         ></a>
                       </div>
-                      <a href="assests/Ashwani.pdf" download class="btn btn2"
+                      <a href="assets/Ashwani.pdf" download class="btn btn2"
                         >Download Resume</a
                       >
                     </div>
