Changed text in it

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <p class="con">This NewsFlash application will display the latest news articles which are verified and approved by NewsAPI.Users can browse news articles through various categories and get all details in the read more section. 
             This ensures an infinite scroll till all outcomes are exhausted.<br><br> <a href="https://github.com/Ashwani-Verma-07/NewsFlash-App" style="color: white;text-decoration: none;">🔗GitHub Repo</a>
             <br><br>
-            ✔️React-Js&nbsp;&nbsp; ✔️HTML/CSS &nbsp;&nbsp; ✔️API 
+            ✔️React-Js ✔️HTML/CSS ✔️Bootstrap  ✔️API
             <br><br>
             <button class="Button-1" onclick="window.open('https://drive.google.com/file/d/1jqxiY5S3_Ovo6519-DhHmtLadFY_anM7/view?usp=share_link')">View Live</button>
           </p>
@@ -188,7 +188,7 @@
                       <p> <a href="mailto:ashverma017@gmail.com" style="text-decoration: none; color:rgb(231, 229, 229);"><i class="fa-solid fa-envelope"></i>ashverma017@gmail.com </a></p>
                       <p ><i class="fas fa-mobile-alt" style="margin-left:-70px;"></i>+91-9205913782</p>
                       <p>
-                        <i class="fa-solid fa-location-dot" style="margin-left: 10px;"></i>C-277 Swaranjayanti puram
+                        <i class="fa-solid fa-location-dot" style="margin-left: 10px;"></i>Ghaziabad - UttarPradesh - India
                       </p>
                      
                       </div>
